# graficaRasterization

./: .gitignore  CMakeLists.txt  FShader.fs  VShader.vs  main.cpp  setup.sh
include/: Mat4.h
src/: Mat4.cpp
